Video Comment Part
I added time,rating,coment and user for each video ,Also I made a
database connetion for this stage.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="action_settings">Settings</string>
      <string name="kategori_sec">Kategori Seç</string>
      <string name="ders_sec">Ders Seç</string>
+     
+     <string name="click_me">Click Me</string>
     
      <string-array name="KursSec">
         <item>KPSS</item>
